Don't forget to always back up your database before upgrading!

See the file UPGRADE for more detailed per-version upgrade instructions from the
oldest supported upgrading version, MediaWiki 1.27.

Some specific notes for MediaWiki 1.38 upgrades are below:
* …

For notes on 1.36.x and older releases, see HISTORY.

=== Configuration changes for system administrators in 1.38 ===
* …

==== New configuration ====
* $wgBrowserFormatDetection – This setting allows overriding browsers' automatic
  detection and handling of formats. It's initially used to prevent auto-linking
  of possible telephone numbers in wiki pages' output in Safari on iOS; this can
  be re-enabled if you wish, or locally extended for other browsers' quirks.
* …

==== Changed configuration ====
* $wgMaxImageArea - This setting may now be set to false to disable size
  checking before scaling. Extensions can still override its value by
  using the BitmapHandlerCheckImageArea hook.
* …

==== Removed configuration ====
* $wgShellLocale - This setting has been removed as it was a flawed solution
  to the problem of locale dependence, MediaWiki will now always set a locale
  of C.UTF-8 or C and works around the remaining problems of the C locale by
  not using escapeshellarg. This follows the direction of PHP 8.0, which sets
  a locale of C by default instead of respecting LC_CTYPE.
* …

=== New user-facing features in 1.38 ===
* …

=== New developer features in 1.38 ===
* Added a deleteUserEmail maintenance script - This file enables the deletion
  of a given user's associated email address. It can be helpful for
  privacy-preserving operations.
* …

=== External library changes in 1.38 ===
* …

==== New external libraries ====
* …

===== New development-only external libraries =====
* …

==== Changed external libraries ====
* Updated wikimedia/parsoid from v0.14.0-a14 to v0.15.0-a1.
* Updated wikimedia/purtle from 1.0.7 to 1.0.8
* Updated wikimedia/shellbox from 2.0.0 to 2.1.0
* …
