@@ -9413,6 +9413,8 @@ $wgAjaxExportList = [];
 
 /**
  * Enable AJAX check for file overwrite, pre-upload
+ *
+ * @deprecated since MediaWiki 1.38 and ignored
  */
 $wgAjaxUploadDestCheck = true;
 
